--- a/homeworks/style.css
+++ b/homeworks/style.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: darkslategray;
 }
@@ -5,6 +11,17 @@ body {
 a {
     color: black;
     text-decoration: none;
+}
+
+li {
+    margin-left: 30px;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    margin-bottom: 30px;
 }
 
 .container {
@@ -17,4 +34,26 @@ a {
 
 .homework {
     text-align: left;
+}
+
+.task {
+    margin-bottom: 10px;
+}
+
+.sample {
+    margin-left: 20px;
+    font-style: italic;
+}
+
+.button {
+    cursor: pointer;
+    border: 1px rgba(255, 60, 0, 0.678) solid;
+    padding: 10px;
+    margin: 20px auto 20px auto;
+    width: 200px;
+    background-color: #fd886866;
+}
+
+.button:hover {
+    background-color: #fd886898;
 }
