--- a/homeworks/css/style.css
+++ b/homeworks/css/style.css
@@ -24,6 +24,13 @@ h4 {
     margin-bottom: 30px;
 }
 
+textarea {
+    width: 80%;
+    height: 100px;    
+    margin: 10px auto;
+    padding: 10px;
+}
+
 .container {
     padding: 50px;
     text-align: center;
