changed textarea style

--- a/homeworks/css/style.css
+++ b/homeworks/css/style.css
@@ -24,12 +24,13 @@ h4 {
     margin-bottom: 30px;
 }
 
-#userString {
+textarea {
     width: 80%;
     height: 100px;    
     margin: 10px auto;
     padding: 10px;
 }
+
 
 .container {
     padding: 50px;
