--- a/homeworks/css/style.css
+++ b/homeworks/css/style.css
@@ -36,7 +36,7 @@ textarea {
     padding: 50px;
     text-align: center;
     background-color: white;
-    margin: 0 20% 0 20%;
+    margin: 10px 20% 0 20%;
     min-height: 80vh;
 }
 
