--- a/homeworks/css/style.css
+++ b/homeworks/css/style.css
@@ -36,8 +36,8 @@ textarea {
     padding: 50px;
     text-align: center;
     background-color: white;
-    margin: 10px 20% 0 20%;
-    min-height: 80vh;
+    margin: 5vh 20% 0 20%;
+    min-height: 90vh;
 }
 
 .homework {
