added hw dyn_form

--- a/homeworks/css/style.css
+++ b/homeworks/css/style.css
@@ -38,6 +38,7 @@ textarea {
     background-color: white;
     margin: 5vh 20% 0 20%;
     min-height: 90vh;
+    height: fit-content;
 }
 
 .homework {
