--- a/homeworks/hw_27/css/style.css
+++ b/homeworks/hw_27/css/style.css
@@ -62,13 +62,14 @@ input[type="radio"]+span {
 input[type="checkbox"] {
     max-width: 15px;
 }
+
 .error {
-    display: none;
+    visibility: hidden;
+    font-size: 12px;
+    color: red;
+    margin-left: 150px;
 }
 
 .invalid+.error {
-    color: red;
-    margin-left: 150px;
-    display: block;
-    font-size: 12px;
+    visibility: visible;
 }
