--- a/homeworks/hw_33/css/styles.css
+++ b/homeworks/hw_33/css/styles.css
@@ -24,7 +24,7 @@
     width: 200px;
     height: 200px;
     position: relative;
-    background: #ee5;
+    background: orange;
     border-radius: 50%;
     margin: auto;
     margin-bottom: 20px;
@@ -32,7 +32,7 @@
 
 .currentTime {
     position: relative;
-    width: 200px;
+    width: 100%;
     top: 30%;
     text-align: center;
     margin: auto;
@@ -40,7 +40,7 @@
 
 .division {
     position: absolute;
-    background: #3e5;
+    background: green;
     border-radius: 50%;
     text-align: center;
 }
@@ -50,7 +50,7 @@
     position: absolute;
     background: #000;
     border-radius: 4px;
-    z-index: 100;
+    z-index: 80;
 }
 
 .minutesHand {
@@ -64,7 +64,7 @@
 .secondsHand {
     width: 2px;
     position: absolute;
-    background: #000;
+    background: red;
     border-radius: 5px;
-    z-index: 80;
+    z-index: 100;
 }
