--- a/homeworks/hw_43/css/styles.css
+++ b/homeworks/hw_43/css/styles.css
@@ -2,34 +2,45 @@
     margin: auto;
 }
 
-.center {
+.form{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    margin-bottom: 50px;
-}
+    gap: 20px;
+    margin-bottom: 30px;
 
-.center input {
-    text-align: center;
-    padding: 10px;
-    border: 1px rgba(255, 60, 0, 0.678) solid;
+}
+.form  select
+{
     width: 150px;
+    border: 1px  rgba(255, 60, 0, 0.678) solid;
+    padding-left: 10px;
 }
 
-.center div {
+.form .btn{
     cursor: pointer;
     border: 1px rgba(255, 60, 0, 0.678) solid;
-    padding: 10px;
-    width: 200px;
+    padding: 3px;
+    width: 100px;
     background-color: #fd886866;
     text-align: center;
+}
+
+.btn {
+    cursor: pointer;
+    width: 100px;
+    padding: 0;
+    background-color: rgb(194, 194, 194);
+    text-align: center;
+}
+
+.btn-shift {
+    position: absolute;
+    z-index: 99;
 }
 
 .game-field {
     position: relative;
     background-color: yellow;
-    margin: auto;
+/*     margin: auto; */
     transform: translateZ(0);
 }
 
@@ -37,8 +48,15 @@
     font-size: 30px;
     font-weight: bold;
     text-align: center;
+    font: 30px Verdana;
 }
-.game-racket{
-     transition-duration: 16ms; 
-    transition-timing-function: linear; 
+
+.game-racket {
+    transition-duration: 16ms;
+    transition-timing-function: linear;
+}
+.game-div__inner{
+    position: absolute;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
 }
