--- a/homeworks/extra/extra_h/css/style.css
+++ b/homeworks/extra/extra_h/css/style.css
@@ -1,25 +1,173 @@
 * {
     padding: 0;
     margin: 0;
-
+    box-sizing: border-box;
 }
 
 body {
-    background-color: darkgrey;
+    background-color: rgb(54, 31, 49);
+}
+
+
+#fill {
+    background-image: url(../images/icons/i_backet.png);
+}
+
+#pencil {
+    background-image: url(../images/icons/i_pencil.png);
+}
+
+#save {
+    background-image: url(../images/icons/save.png);
+}
+
+#trash {
+    background-image: url(../images/icons/trash.png);
+}
+
+#undo {
+    background-image: url(../images/icons/undo.png);
+}
+
+.main {
+    background-color: #e5dede;
+    position: relative;
+    max-width: 1060px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 230px;
 }
 
 canvas {
-    margin-left: auto;
-    margin-right: auto;
     display: block;
+    width: 100%;
+    height: 100%;
+    transform: translateZ(0);
 }
 
 #palette {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 500px;
-    background-color: white;
-    border: 1px solid black;
-    margin-bottom: 10px;
+    max-width: 1060px;
+    background-color: #e5dede;
+    margin-top: 10px;
+}
+.palette-commands {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 10px;
+}
+.palette-commands div {
+    background-color: #e5dede;
+    background-size: contain;
+    width: 80px;
+    height: 80px;
+    margin: 5px;
+}
+.palette-commands div:hover {
+    background-color:  white;
+    box-shadow: 0px 0px 3px 2px rgba(34, 60, 80, 0.2);
+    transform: scale(1.3);
+    border-radius: 7px;
+}
+.colors {
+    margin: 10px;
+}
+
+.colors .display-none {
+    display: none;
+}
+
+.color-set {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-auto-rows: 20px;
+    margin: 10px;
+}
+
+.color-format {
+    width: 25px;
+    height: 25px;
+    border-radius: 25%;
+    box-shadow: 0px 0px 3px 1px rgba(34, 60, 80, 0.2);
+    cursor: pointer;
+}
+
+.colors .activ {
+    transform: scale(1.5);
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+
+@media (max-width: 1100px) {
+
+    .main, #palette {
+        max-width: 800px;
+    }
+
+}
+
+@media (max-width: 825px) {
+
+    .main, #palette {
+        display: block;
+        margin: auto;
+        width: 90%;
+    }
+
+    .colors {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .color-set {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        margin: 0 3px;
+        gap: 3px;
+    }
+
+    .color-set .color-format:last-child {
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 500px) {
+
+    .color-format {
+        width: 22px;
+        height: 22px;
+    }
+    .palette-commands div {
+        background-size: contain;
+        width: 60px;
+        height: 60px;
+    }
+}
+
+@media (max-width: 450px) {
+    .color-format {
+        width: 25px;
+        height: 25px;
+    }
+}
+
+@media (max-width: 260px) {
+
+    .colors,
+    .color-set {
+        display: inline-flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        margin: 3px;
+    }
+
+    .color-format {
+        width: 20px;
+        height: 20px;
+    }
 }
