--- a/homeworks/extra/extra_h/css/style.css
+++ b/homeworks/extra/extra_h/css/style.css
@@ -68,16 +68,18 @@ canvas {
     width: 80px;
     height: 80px;
     margin: 5px;
+    cursor: pointer;
 }
  .palette-commands div:hover{
     background-color:  white;
     box-shadow: 0px 0px 3px 2px rgba(34, 60, 80, 0.2);
     transform: scale(1.1);
     border-radius: 7px;
+    transition: 0.5s;
 }
  
-.palette-commands .activ {
-    background-color:  white;
+.palette-commands .activ, .palette-commands .activ:hover {
+    background-color:  rgba(250, 90, 90, 0.308);
     box-shadow: 0px 0px 3px 2px rgba(34, 60, 80, 0.2);
     transform: scale(1.1);
     border-radius: 7px;
