--- a/homeworks/extra/extra_h/css/style.css
+++ b/homeworks/extra/extra_h/css/style.css
@@ -119,6 +119,7 @@ canvas {
 
     .main, #palette {
         max-width: 800px;
+        width: 100%;
     }
 
 }
@@ -128,12 +129,12 @@ canvas {
     .main, #palette {
         display: block;
         margin: auto;
-        width: 90%;
     }
 
     .colors {
         display: flex;
         flex-direction: row;
+        justify-content: space-around;
     }
 
     .color-set {
@@ -149,7 +150,7 @@ canvas {
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 550px) {
 
     .color-format {
         width: 22px;
@@ -157,19 +158,21 @@ canvas {
     }
     .palette-commands div {
         background-size: contain;
-        width: 60px;
-        height: 60px;
+        width: 40px;
+        height: 40px;
     }
+
 }
 
-@media (max-width: 450px) {
+@media (max-width: 400px) {
+
     .color-format {
-        width: 25px;
-        height: 25px;
+        width: 18px;
+        height: 18px;
     }
-}
 
-@media (max-width: 260px) {
+}
+@media (max-width: 350px) {
 
     .colors,
     .color-set {
@@ -177,9 +180,15 @@ canvas {
         flex-wrap: wrap;
         flex-direction: row;
         margin: 3px;
+        justify-content: space-around;
     }
 
     .color-format {
+        width: 20px;
+        height: 20px;
+    }
+
+    .palette-commands div {
         width: 20px;
         height: 20px;
     }
