--- a/homeworks/extra/extra_h/css/style.css
+++ b/homeworks/extra/extra_h/css/style.css
@@ -106,6 +106,7 @@ canvas {
 
 .colors {
     margin: 10px;
+
 }
 
 .colors .display-none {
@@ -131,6 +132,7 @@ canvas {
     transform: scale(1.5);
     border: 2px solid white;
     border-radius: 50%;
+    transition: 0.5s;
 }
 
 
