--- a/homeworks/extra/extra_h/css/style.css
+++ b/homeworks/extra/extra_h/css/style.css
@@ -15,15 +15,15 @@ body {
 }
 
 #fill {
-    background-image: url(../images/icons/i_backet.png);
+    background-image: url(../images/icons/fill.png);
 }
 
 #pencil {
-    background-image: url(../images/icons/i_pencil.png);
+    background-image: url(../images/icons/draw.png);
 }
 
 #save {
-    background-image: url(../images/icons/save.png);
+    background-image: url(../images/icons/download.png);
 }
 
 #clear {
@@ -32,6 +32,18 @@ body {
 
 #undo {
     background-image: url(../images/icons/undo.png);
+}
+
+#change {
+    background-image: url(../images/icons/loop.png);
+}
+
+.music {
+    background-image: url(../images/icons/s_off.png);
+}
+
+.on {
+    background-image: url(../images/icons/s_on.png);
 }
 
 .some_field {
@@ -81,27 +93,23 @@ canvas {
 
 .palette-commands div {
     background-color: #e5dede;
-    background-size: contain;
-    width: 40px;
-    height: 40px;
+    background-size: 30px 30px;
+    background-position: center;
+    width: 50px;
+    height: 50px;
     margin: 5px;
     cursor: pointer;
+    background-repeat: no-repeat;
 }
 
 .palette-commands div:hover {
-    background-color: white;
-    box-shadow: 0px 0px 3px 2px rgba(34, 60, 80, 0.2);
-    transform: scale(1.1);
-    border-radius: 7px;
-    transition: 0.5s;
+    border-bottom: 3px solid rgb(223, 122, 13);
 }
 
-.palette-commands .activ,
-.palette-commands .activ:hover {
-    background-color: rgba(250, 90, 90, 0.308);
-    box-shadow: 0px 0px 3px 2px rgba(34, 60, 80, 0.2);
+.palette-commands .active,
+.palette-commands .active:hover {
     transform: scale(1.1);
-    border-radius: 7px;
+    border-bottom: 3px solid rgb(244, 30, 14);
 }
 
 .colors {
@@ -128,7 +136,7 @@ canvas {
     cursor: pointer;
 }
 
-.colors .activ {
+.colors .active {
     transform: scale(1.5);
     border: 2px solid white;
     border-radius: 50%;
@@ -148,12 +156,13 @@ canvas {
 
 @media (max-width: 825px) {
 
-    .some_field{
+    .some_field {
         top: 0;
         left: 0;
         transform: translate(0);
         width: 100%;
     }
+
     .main,
     #palette {
         display: block;
