--- a/homeworks/extra/extra_h/css/style.css
+++ b/homeworks/extra/extra_h/css/style.css
@@ -5,53 +5,116 @@
 }
 
 body {
-    background-color: rgb(54, 31, 49);
-    background-image: url(../images/bg.jpeg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background-image: url(../images/bg2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100vw;
-    height: 100vh;
 }
 
-.fill {
-    background-image: url(../images/icons/fill.png);
+.container {
+    display: flex;
+    width: 100%;
+    max-width: 950px;
+    max-height: 100vh;
+    gap: 10px;
 }
 
-.pencil {
-    background-image: url(../images/icons/draw.png);
-}
-
-.save {
-    background-image: url(../images/icons/download.png);
-}
-
-.clear {
-    background-image: url(../images/icons/trash.png);
-}
-
-.undo {
-    background-image: url(../images/icons/undo.png);
-}
-
-.change {
-    background-image: url(../images/icons/loop.png);
-}
-
-.upload {
-    background-image: url(../images/icons/upload.png);
-}
-
-.music {
-    background-image: url(../images/icons/s_off.png);
-}
-
-.on {
-    background-image: url(../images/icons/s_on.png);
-}
-
-.inputFile {
+.humburger {
     display: none;
+    background-color: rgb(234, 230, 230);
+    z-index: 3;
+}
+
+.humburger img {
+    height: 50px;
+}
+
+.tools-board {
+    width: 210px;
+    padding: 10px;
+    background-color: rgb(234, 230, 230);
+}
+
+.tools-board .row {
+    margin-bottom: 30px;
+}
+
+
+.row .options {
+    list-style: none;
+}
+
+.row .options .option {
+    margin: 10px;
+    cursor: pointer;
+}
+
+.row .options .option:hover {
+    color: orange;
+}
+
+.drawing-board {
+    background: #fff;
+    flex: 1;
+    position: relative;
+}
+
+.row .options .option img {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+
+.row .options .option span {
+    line-height: 20px;
+}
+
+.row .options .option .inputFile,
+.row .options .music .off,
+.drawing-board .background,
+.row .colors .display-none {
+    display: none;
+}
+
+.drawing-board canvas {
+    display: block;
+    width: 100%;
+    height: 90vh;
+    transform: translateZ(0);
+}
+
+.row .colors {
+    margin: 10px;
+}
+
+.row .color-set {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-auto-rows: 20px;
+    margin: 5px;
+}
+
+.row .color-format {
+    width: 20px;
+    height: 20px;
+    border-radius: 25%;
+    box-shadow: 0px 0px 3px 1px rgba(34, 60, 80, 0.2);
+    cursor: pointer;
+}
+
+.row .colors .active {
+    transform: scale(1.5);
+    border: 2px solid white;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+
+.row .options .active {
+    font-weight: bold;
 }
 
 .progress {
@@ -64,198 +127,78 @@ body {
     align-items: center;
     justify-content: center;
     transition: width 0.5s;
-    z-index: 1001;
+    z-index: 2;
 }
 
 .loaded_hiding .progress {
     transition: 0.3s opacity;
     opacity: 0;
-  }
-
-.some_field {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: max-content;
 }
 
-.main {
-    background-color: #e5dede;
-    position: relative;
-    max-width: 1060px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 230px;
-}
-
-canvas {
-    display: block;
-    width: 100%;
-    height: 100%;
-    transform: translateZ(0);
-}
-
-.background {
-    display: none;
-}
-
-#palette {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    max-width: 1060px;
-    background-color: #e5dede;
-}
-
-.palette-commands {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-    padding-bottom: 10px;
-    padding-top: 10px;
-}
-
-.palette-commands div {
-    background-color: #e5dede;
-    background-size: 30px 30px;
-    background-position: center;
-    width: 50px;
-    height: 50px;
-    margin: 5px;
-    cursor: pointer;
-    background-repeat: no-repeat;
-}
-
-.palette-commands div:hover {
-    border-bottom: 3px solid rgb(223, 122, 13);
-}
-
-.palette-commands .active,
-.palette-commands .active:hover {
-    transform: scale(1.1);
-    border-bottom: 3px solid rgb(244, 30, 14);
-}
-
-.colors {
-    margin: 10px;
-
-}
-
-.colors .display-none {
-    display: none;
-}
-
-.color-set {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-auto-rows: 20px;
-    margin: 10px;
-}
-
-.color-format {
-    width: 25px;
-    height: 25px;
-    border-radius: 25%;
-    box-shadow: 0px 0px 3px 1px rgba(34, 60, 80, 0.2);
-    cursor: pointer;
-}
-
-.colors .active {
-    transform: scale(1.5);
-    border: 2px solid white;
-    border-radius: 50%;
-    transition: 0.5s;
-}
-
-
-@media (max-width: 1100px) {
-
-    .main,
-    #palette {
-        max-width: 800px;
-        width: 100%;
+@media (max-width: 980px) {
+    body {
+        background-position: top left;
     }
 
+    .drawing-board {
+        flex: none;
+    }
 }
 
-@media (max-width: 825px) {
-
-    .some_field {
-        top: 0;
-        left: 0;
-        transform: translate(0);
-        width: 100%;
-    }
-
-    .main,
-    #palette {
+@media (max-width: 850px) {
+    .container {
         display: block;
+        position: relative;
+    }
+
+    .drawing-board {
+        width: 630px;
         margin: auto;
     }
 
+    .humburger {
+        display: block;
+        position: absolute;
+        left: -15px;
+        top: 50%;
+        transform: translateY(-50%);
+        border-radius: 8px 0 0 8px;
+    }
+
+    .tools-board {
+        position: fixed;
+        top: 50%;
+        right: -210px;
+        display: block;
+        z-index: 100;
+        transform: translateY(-50%);
+        transition: 1.5s right;
+    }
+
+    .hidden {
+        right: 0;
+    }
+
+    .hidden .humburger svg {
+        transform: rotate(180deg);
+    }
+}
+
+@media (max-width: 630px) {
+
+    .drawing-board,
+    .drawing-board canvas {
+        width: 100%;
+        height: 100%;
+    }
+
+    .row .options .option {
+        margin: 5px;
+    }
+
     .colors {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+        height: 200px;
+        overflow-y: scroll;
     }
 
-    .color-set {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        margin: 0 3px;
-        gap: 3px;
-    }
-
-    .color-set .color-format:last-child {
-        margin-bottom: 10px;
-    }
-}
-
-@media (max-width: 550px) {
-
-    .color-format {
-        width: 22px;
-        height: 22px;
-    }
-
-    .palette-commands div {
-        background-size: contain;
-        width: 40px;
-        height: 40px;
-    }
-
-}
-
-@media (max-width: 400px) {
-
-    .color-format {
-        width: 18px;
-        height: 18px;
-    }
-
-}
-
-@media (max-width: 350px) {
-
-    .colors,
-    .color-set {
-        display: inline-flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        margin: 3px;
-        justify-content: space-around;
-    }
-
-    .color-format {
-        width: 20px;
-        height: 20px;
-    }
-
-    .palette-commands div {
-        width: 20px;
-        height: 20px;
-    }
 }
