--- a/homeworks/extra/extra_h/css/style.css
+++ b/homeworks/extra/extra_h/css/style.css
@@ -13,13 +13,14 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top left;
+    height: fit-content;
 }
 
 .container {
     display: flex;
     width: 100%;
-    max-width: 950px;
     max-height: 100vh;
+    max-width: 950px;
     gap: 10px;
     justify-content: center;
 }
@@ -35,7 +36,7 @@ body {
 }
 
 .tools-board {
-    width: 210px;
+    width: 230px;
     padding: 10px;
     background-color: rgb(234, 230, 230);
 }
@@ -61,6 +62,7 @@ body {
 .drawing-board {
     background: #fff;
     position: relative;
+    max-width: 100vh;
 }
 
 .row .options .option img {
@@ -83,7 +85,7 @@ body {
 .drawing-board canvas {
     display: block;
     width: 100%;
-    height: 90vh;
+    height: 100%;
     transform: translateZ(0);
 }
 
@@ -136,7 +138,7 @@ body {
 }
 
 
-@media (max-width: 850px) {
+@media (max-width: 975px) {
     .container {
         display: block;
         position: relative;
@@ -147,17 +149,6 @@ body {
         margin: auto;
     }
 
-    .humburger {
-        display: block;
-        position: absolute;
-        left: -30px;
-        top: 20px;
-        border-radius: 8px 0 0 8px;
-    }
-
-    .humburger svg {
-        transform: rotate(180deg);
-    }
 
     .tools-board {
         position: fixed;
@@ -168,9 +159,22 @@ body {
         transition: 1s right;
         height: 100vh;
     }
-
     .hidden {
-        right: -210px;
+        right: -230px;
+    }
+    .humburger {
+        display: block;
+        position: fixed;
+        right: 230px;
+        top: 10px;
+        border-radius: 8px 0 0 8px;
+        transition: 1s right;
+    }
+    .hidden .humburger{
+        right: 0px;
+    } 
+    .humburger svg {
+        transform: rotate(180deg);
     }
 
     .hidden .humburger svg {
@@ -192,6 +196,14 @@ body {
 
     .colors {
         height: 300px;
+        overflow-y: scroll;
+    }
+
+}
+
+@media (max-height: 715px) {
+
+    .tools-board {
         overflow-y: scroll;
     }
 
